--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     align-content: flex-end;
+    align-items: flex-start;
     width: 55%; 
 
     &__title {
@@ -31,33 +32,6 @@
         padding: 8px 10px;
         background-color: $accent;
         display: inline-block;
-        width: 30%;
         text-align: center;
     }
-}
-
-// button
-@media (max-width: 1200px) {
-    .bio {
-        width: 56%;
-        padding: 3%;
-        &__button {
-            width: 40%;
-        }
-    }
-
-
-}
-
-// mobile
-@media (max-width: 768px) {
-    .bio {
-        width: 100%;
-        padding: 3%;
-        &__button {
-            width: 40%;
-        }
-    }
-
-
 }
