--- a/styles/partials/_blog-highlights.scss
+++ b/styles/partials/_blog-highlights.scss
@@ -13,6 +13,7 @@
         position: relative;
         bottom: 24px;
         box-shadow: 10px 10px $tertiary-color, -200px 10px $tertiary-color;
+        width: 100%;
     }
 
     &--content {
@@ -37,7 +38,6 @@
         padding: 8px 10px;
         background-color: $accent;
         display: inline-block;
-        width: 30%;
         text-align: center;
     }
 }
@@ -55,6 +55,7 @@
         box-shadow: 10px 10px $secondary-color, 200px 10px $secondary-color;
         position: relative;
         top: 14px;
+        width: 100%;
     }
 
     &--content {
@@ -84,9 +85,33 @@
         padding: 8px 10px;
         background-color: $accent;
         display: inline-block;
-        width: 30%;
         text-align: center;
     }
 }
 
 
+// break the blog highlights section into individual boxes
+@media (max-width: 768px) {
+    .blog-top {
+        display: block;
+        &--pic {
+            width: 100%;
+        }
+    }
+
+    .blog-bottom {
+        display: block;
+        &--pic {
+            width: 100%;
+        }
+    }
+}
+
+@media (max-width: 565px) {
+    .blog-bottom {
+        &--image {
+            box-shadow: none;
+            box-shadow: 10px 10px blue; 
+        }
+    }
+}
