--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -2,11 +2,10 @@
     max-width: 1640px;
 	width: 80%;
 	margin: 0 auto;
-    border: 1px dotted pink;
 }
 
 body {
-    background-color: pink;
+    background-color: #fff;
 }
 @media (max-width: 1080px) {
     .wrapper {
