--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -1,3 +1,7 @@
+.background-contact {
+    background-color: $white-shade;
+}
+
 .contact-body {
     display: flex;
     flex-wrap: wrap;
@@ -9,13 +13,18 @@
     background-size: cover;
 	background-position: center;
     height: 40vh;    
+    &__title {
+        @include quaternary-font(50px);
+        position: relative;
+        bottom: -190px;
+    }
 }
 
 .social-media {
     padding: 3% 2%;
     align-self: flex-start;
     margin-bottom: 20px;
-    border: 1px solid black;
+    background-color: #fff;
     width: 30%;
     &__list {
         display: flex;
@@ -52,4 +61,52 @@
 .contact-form {
     width: 65%;
     margin-left: 5%;
+}
+
+@media (max-width: 730px) {
+    .contact-body {
+        display: block;
+    }
+
+    .social-media {
+        width: 60%;
+        padding: 3%;
+    }
+
+    .contact-form {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }    
+} 
+
+@media (max-width: 644px) {
+    .contact-body {
+        padding-top: 20%;
+    }
+    .contact-header {  
+        &__title {
+            @include quaternary-font(25px);
+            position: relative;
+            bottom: -225px;
+        }
+    }
+}
+
+
+@media (max-width: 480px) {
+    .contact-body {
+        display: block;
+    }
+
+    .social-media {
+        width: 100%;
+        padding: 3%;
+    }
+
+    .contact-form {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
 }
