--- a/styles/partials/_landing-header.scss
+++ b/styles/partials/_landing-header.scss
@@ -16,8 +16,8 @@
     // li
     &-nav__list-item {
         padding: 5px 15px;
-        
     }
+
     // a tag
     &-nav__link-item {
         text-decoration: none;
@@ -36,6 +36,10 @@
     }
 }
 
+.hamburger-menu {
+    display: none;
+}
+
 .header-content {
     position: absolute;
     top: 45px;
@@ -44,12 +48,9 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    border: 1px solid blue;
 }
 
 .profile-pic {
-    border: 1px solid purple;
-    // display: inline-block;
     width: 38%;
     position: absolute;
     top: 10%;
@@ -57,13 +58,13 @@
     &__image--framed {
         width: 100%;
         display: block;
-        border: 1px solid red;
         box-shadow: 10px 10px #ffffff;
     }
 }
 
+
+
 .blogger {
-    border: 1px solid green;
     margin-left: 45%;
     margin-top: 20%;
     position: relative;
@@ -71,9 +72,6 @@
         @include quaternary-font(120px);
     }
 }
-
-
-    
 
 .emblem {
     position: absolute;
@@ -86,6 +84,8 @@
 .seo {
     display: none;
 }
+
+
 
 @media (max-width: 1080px) {
     .blogger {
@@ -108,6 +108,20 @@
         margin-left: 39%;
         &--name {
             @include quaternary-font(80px);
+        }
+    }
+
+    .header-nav {
+        display: none;
+    }
+
+    .hamburger-menu {
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        &--link {
+            font-size: 30px;
         }
     }
 }
@@ -180,14 +194,32 @@
 
 @media (max-width: 480px) {
     .blogger {
-        margin-left: 4%;
-        margin-top: 38%;
+        margin-left: 13%;
+        margin-top: 62%;
+    }
+    .header-content {
+        width: 80%;
+    }
+    .profile-pic {
+        left: 100px;
     }
 }
 
-@media (max-width: 390px) {
+@media (max-width: 394px) {
+    .profile-pic {
+        left: 64px;
+    }
+}
+
+@media (max-width: 320px) {
     .blogger {
-        margin-left: 14%;
-        margin-top: 64%;
+        margin-left: 8%;
+        margin-top: 62%;
+    }
+    .header-content {
+        width: 80%;
+    }
+    .profile-pic {
+        left: 66px;
     }
 }
