--- a/styles/style.css
+++ b/styles/style.css
@@ -160,11 +160,10 @@ a {
 .wrapper {
   max-width: 1640px;
   width: 80%;
-  margin: 0 auto;
-  border: 1px dotted pink; }
+  margin: 0 auto; }
 
 body {
-  background-color: pink; }
+  background-color: #fff; }
 
 @media (max-width: 1080px) {
   .wrapper {
@@ -220,6 +219,9 @@ body {
       text-transform: uppercase;
       padding: 5px 20px; }
 
+.hamburger-menu {
+  display: none; }
+
 .header-content {
   position: absolute;
   top: 45px;
@@ -236,11 +238,9 @@ body {
   justify-content: flex-start;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
-  border: 1px solid blue; }
+  align-items: center; }
 
 .profile-pic {
-  border: 1px solid purple;
   width: 38%;
   position: absolute;
   top: 10%;
@@ -248,12 +248,10 @@ body {
   .profile-pic__image--framed {
     width: 100%;
     display: block;
-    border: 1px solid red;
     -webkit-box-shadow: 10px 10px #ffffff;
     box-shadow: 10px 10px #ffffff; }
 
 .blogger {
-  border: 1px solid green;
   margin-left: 45%;
   margin-top: 20%;
   position: relative; }
@@ -302,7 +300,16 @@ body {
       font-weight: bold;
       letter-spacing: 1px;
       line-height: 92px;
-      text-transform: uppercase; } }
+      text-transform: uppercase; }
+  .header-nav {
+    display: none; }
+  .hamburger-menu {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px; }
+    .hamburger-menu--link {
+      font-size: 30px; } }
 
 @media (max-width: 661px) {
   .header {
@@ -361,13 +368,25 @@ body {
 
 @media (max-width: 480px) {
   .blogger {
-    margin-left: 4%;
-    margin-top: 38%; } }
+    margin-left: 13%;
+    margin-top: 62%; }
+  .header-content {
+    width: 80%; }
+  .profile-pic {
+    left: 100px; } }
 
-@media (max-width: 390px) {
+@media (max-width: 394px) {
+  .profile-pic {
+    left: 64px; } }
+
+@media (max-width: 320px) {
   .blogger {
-    margin-left: 14%;
-    margin-top: 64%; } }
+    margin-left: 8%;
+    margin-top: 62%; }
+  .header-content {
+    width: 80%; }
+  .profile-pic {
+    left: 66px; } }
 
 .intro-bio {
   background-color: #f6f6f6; }
@@ -380,11 +399,9 @@ body {
   display: flex;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
-  justify-content: flex-end;
-  border: 1px solid green; }
+  justify-content: flex-end; }
 
 .bio {
-  border: 1px solid red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -423,6 +440,12 @@ body {
     display: inline-block;
     text-align: center; }
 
+@media (max-width: 644px) {
+  .bio {
+    display: block;
+    width: 100%;
+    padding: 3%; } }
+
 .overview {
   background-color: #f6f6f6; }
   .overview--image {
@@ -446,7 +469,6 @@ body {
     line-height: 32px;
     margin-left: 10px; }
   .overview--photos, .overview--about, .overview--blog, .overview--contact {
-    border: 1px solid black;
     width: 50%;
     padding-bottom: 3%; }
   .overview--title {
@@ -490,7 +512,6 @@ body {
 
 @media (max-width: 768px) {
   .overview--photos, .overview--about, .overview--blog, .overview--contact {
-    border: 1px solid black;
     width: 100%;
     padding: 3%; } }
 
@@ -500,7 +521,6 @@ body {
   display: flex;
   margin-bottom: 5%; }
   .blog-top--pic {
-    border: 1px solid blue;
     width: 50%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -516,7 +536,6 @@ body {
     width: 100%; }
   .blog-top--content {
     width: 50%;
-    border: 1px solid red;
     margin-left: 5%; }
   .blog-top__title {
     margin-top: 5%;
@@ -568,9 +587,10 @@ body {
     width: 100%; }
   .blog-bottom--content {
     width: 50%;
-    border: 1px solid red;
-    margin-right: 5%; }
+    margin-right: 5%;
+    padding-bottom: 5%; }
   .blog-bottom__title {
+    margin-top: 5%;
     font-family: 'Oswald', sans-serif;
     font-size: 42px;
     color: #171717;
@@ -607,17 +627,30 @@ body {
     display: block; }
     .blog-top--pic {
       width: 100%; }
+    .blog-top--content {
+      width: 100%;
+      margin: 0;
+      padding: 3%; }
   .blog-bottom {
     display: block; }
     .blog-bottom--pic {
-      width: 100%; } }
+      width: 100%; }
+    .blog-bottom--content {
+      width: 100%;
+      margin: 0;
+      padding: 3%; } }
 
 @media (max-width: 565px) {
   .blog-bottom--image {
     -webkit-box-shadow: none;
-    box-shadow: none;
-    -webkit-box-shadow: 10px 10px blue;
-    box-shadow: 10px 10px blue; } }
+    box-shadow: none; }
+  .blog-bottom__case {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start; }
+  .blog-top--image {
+    -webkit-box-shadow: none;
+    box-shadow: none; } }
 
 .journey {
   padding: 7% 0;
@@ -656,6 +689,22 @@ body {
     display: inline-block;
     text-align: center; }
 
+@media (max-width: 644px) {
+  .journey--section {
+    display: block; }
+  .journey__image--pic {
+    -webkit-box-shadow: 10px 10px #227284;
+    box-shadow: 10px 10px #227284; }
+  .journey--content {
+    margin: 0;
+    width: 100%;
+    text-align: center; }
+  .journey__title {
+    margin-top: 10px; }
+  .journey__image {
+    margin: 0 auto;
+    text-align: center; } }
+
 .gallery {
   padding: 7% 0;
   background-color: #fff; }
@@ -683,8 +732,8 @@ body {
     line-height: 32px;
     color: #f6f6f6; }
 
-body {
-  background-color: red; }
+.background-blog {
+  background-color: #f6f6f6; }
 
 .main-content {
   display: -webkit-box;
@@ -708,7 +757,7 @@ body {
     line-height: 92px;
     text-transform: uppercase;
     position: relative;
-    bottom: -90px; }
+    bottom: -190px; }
 
 .info {
   width: 30%; }
@@ -803,7 +852,16 @@ body {
 
 @media (max-width: 553px) {
   .blog-bio__image {
-    width: 80%; } }
+    width: 80%; }
+  .info {
+    padding-top: 10px; }
+  .blog-header__title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 32px;
+    color: #171717;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    bottom: -210px; } }
 
 /* mobile view */
 @media (max-width: 480px) {
@@ -817,7 +875,14 @@ body {
     width: 100%; }
     .blog-bio__image {
       display: block;
-      width: 100%; } }
+      width: 100%; }
+  .blog-header__title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 25px;
+    color: #171717;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    bottom: -220px; } }
 
 .article-main {
   margin-left: 5%;
@@ -841,11 +906,10 @@ body {
     line-height: 32px; }
 
 .comment {
-  background-color: green;
   margin: 15px 0; }
   .comment__user {
     margin: 10px 0;
-    background-color: purple;
+    background-color: #fff;
     padding: 3%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -943,6 +1007,9 @@ input, label {
     text-align: center;
     margin-bottom: 15%; }
 
+.background-contact {
+  background-color: #f6f6f6; }
+
 .contact-body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -956,13 +1023,23 @@ input, label {
   background-size: cover;
   background-position: center;
   height: 40vh; }
+  .contact-header__title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    color: #171717;
+    font-weight: bold;
+    letter-spacing: 1px;
+    line-height: 92px;
+    text-transform: uppercase;
+    position: relative;
+    bottom: -190px; }
 
 .social-media {
   padding: 3% 2%;
   -ms-flex-item-align: start;
   align-self: flex-start;
   margin-bottom: 20px;
-  border: 1px solid black;
+  background-color: #fff;
   width: 30%; }
   .social-media__list {
     display: -webkit-box;
@@ -994,3 +1071,39 @@ input, label {
 .contact-form {
   width: 65%;
   margin-left: 5%; }
+
+@media (max-width: 730px) {
+  .contact-body {
+    display: block; }
+  .social-media {
+    width: 60%;
+    padding: 3%; }
+  .contact-form {
+    width: 100%;
+    margin: 0;
+    padding: 0; } }
+
+@media (max-width: 644px) {
+  .contact-body {
+    padding-top: 20%; }
+  .contact-header__title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 25px;
+    color: #171717;
+    font-weight: bold;
+    letter-spacing: 1px;
+    line-height: 92px;
+    text-transform: uppercase;
+    position: relative;
+    bottom: -225px; } }
+
+@media (max-width: 480px) {
+  .contact-body {
+    display: block; }
+  .social-media {
+    width: 100%;
+    padding: 3%; }
+  .contact-form {
+    width: 100%;
+    margin: 0;
+    padding: 0; } }
