added hover on all the buttons :lipstick: :unicorn:

--- a/styles/partials/_blog-highlights.scss
+++ b/styles/partials/_blog-highlights.scss
@@ -37,6 +37,9 @@
         background-color: $accent;
         display: inline-block;
         text-align: center;
+        &:hover {
+            background-color: $secondary-color;
+        }
     }
 }
 
@@ -84,6 +87,9 @@
         background-color: $accent;
         display: inline-block;
         text-align: center;
+        &:hover {
+            background-color: $secondary-color;
+        }
     }
 }
 
