--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -31,6 +31,9 @@
         background-color: $accent;
         display: inline-block;
         text-align: center;
+        &:hover {
+            background-color: $secondary-color;
+        }
     }
 }
 
