--- a/styles/partials/_form.scss
+++ b/styles/partials/_form.scss
@@ -41,6 +41,9 @@ input, label {
         width: 100%;
         text-align: center;
         margin-bottom: 15%;
+        &:hover {
+            background-color: $secondary-color;
+        }
     }
 
 }
