add links to the overview section with hover effect and re-add the blue circle backgrounds for the icons in the overview section :lipstick:

--- a/styles/partials/_overview.scss
+++ b/styles/partials/_overview.scss
@@ -15,6 +15,13 @@
     &--item {
         @include senary-font(32px);
         margin-left: 10px;
+        color: $black;
+    }
+    &--link {
+        color: $black;
+        &:hover {
+            color: $primary-color;
+        }
     }
 
     &--photos, &--about, &--blog, &--contact {
@@ -36,6 +43,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        background-color: $primary-color;
     }
 
     &--icon {
