--- a/styles/partials/_blog-highlights.scss
+++ b/styles/partials/_blog-highlights.scss
@@ -123,17 +123,34 @@
 }
 
 @media (max-width: 565px) {
+    .blog-top {
+        display: block;
+        &--pic {
+            width: 90%;
+            margin: 0 5%;
+        }
+        &--content {
+            width: 100%;
+            margin: 0;
+            padding: 3%;
+        }
+    }
+
+
     .blog-bottom {
-        &--image {
-            box-shadow: none;
+        display: block;
+        &--pic {
+            width: 90%;
+            margin: 0 5%;
+        }
+        &--content {
+            width: 100%;
+            margin: 0;
+            padding: 3%;
         }
         &__case {
             justify-content: flex-start;
         }
     }
-    .blog-top {
-        &--image {
-            box-shadow: none;
-        } 
-    }
+    
 }
