--- a/styles/partials/_blog-highlights.scss
+++ b/styles/partials/_blog-highlights.scss
@@ -127,7 +127,7 @@
         display: block;
         &--pic {
             width: 90%;
-            margin: 0 5%;
+            padding: 0 5%;
         }
         &--content {
             width: 100%;
@@ -141,7 +141,7 @@
         display: block;
         &--pic {
             width: 90%;
-            margin: 0 5%;
+            padding: 0 5%;
         }
         &--content {
             width: 100%;
