--- a/styles/partials/_setup.scss
+++ b/styles/partials/_setup.scss
@@ -18,6 +18,19 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
     overflow: hidden;
 }
 
+.skip-link {
+    position: absolute;
+    left: -1000px;
+    top: 5px;
+    z-index: 999;
+    background: white;
+    color: black;
+}
+
+.skip-link:focus {
+    left: 0;
+}
+
 ul, li {
     padding: 0;
     margin: 0;
