--- a/styles/style.css
+++ b/styles/style.css
@@ -146,6 +146,17 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   clip: rect(0 0 0 0);
   overflow: hidden; }
 
+.skip-link {
+  position: absolute;
+  left: -1000px;
+  top: 5px;
+  z-index: 999;
+  background: white;
+  color: black; }
+
+.skip-link:focus {
+  left: 0; }
+
 ul, li {
   padding: 0;
   margin: 0; }
@@ -656,7 +667,7 @@ body {
     display: block; }
     .blog-top--pic {
       width: 90%;
-      margin: 0 5%; }
+      padding: 0 5%; }
     .blog-top--content {
       width: 100%;
       margin: 0;
@@ -665,7 +676,7 @@ body {
     display: block; }
     .blog-bottom--pic {
       width: 90%;
-      margin: 0 5%; }
+      padding: 0 5%; }
     .blog-bottom--content {
       width: 100%;
       margin: 0;
